--- a/css/styles.css
+++ b/css/styles.css
@@ -11093,6 +11093,18 @@ body {
   -webkit-background-clip: text;
           background-clip: text;
 }
+.gc h1, .masthead .h1 {
+  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.8rem;
+  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+          background-clip: text;
+
+
+}
 .masthead h2, .masthead .h2 {
   max-width: 20rem;
   font-size: 1rem;
