--- a/css/styles.css
+++ b/css/styles.css
@@ -2860,7 +2860,7 @@ textarea.form-control-lg {
   --bs-btn-bg: #ff0000;
   --bs-btn-border-color: #ff0000;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #558985;
+  --bs-btn-hover-bg: #ff6666;
   --bs-btn-hover-border-color: #50817e;
   --bs-btn-focus-shadow-rgb: 123, 175, 172;
   --bs-btn-active-color: #fff;
@@ -2881,7 +2881,7 @@ textarea.form-control-lg {
   --bs-btn-hover-border-color: #5d5081;
   --bs-btn-focus-shadow-rgb: 137, 123, 175;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #5d5081;
+  --bs-btn-active-bg: #5d5081;s
   --bs-btn-active-border-color: #574b79;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
