--- a/css/styles.css
+++ b/css/styles.css
@@ -10992,10 +10992,10 @@ body {
   background-color: #fff;
 }
 #mainNav .navbar-toggler {
-  font-size: 80%;
+  font-size: 100%;
   padding: 0.75rem;
-  color: #ff0000;
-  border: 1px solid #ff0000;
+  color: #303841;
+  border: 1px solid #ffffff;
 }
 #mainNav .navbar-toggler:focus {
   outline: none;
