--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
   --bs-link-color: #ff0000;
-  --bs-link-hover-color: #50817e;
+  --bs-link-hover-color: #ff6666;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #faf4e0;
 }
@@ -2861,10 +2861,10 @@ textarea.form-control-lg {
   --bs-btn-border-color: #ff0000;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #ff6666;
-  --bs-btn-hover-border-color: #50817e;
+  --bs-btn-hover-border-color: #ff6666;
   --bs-btn-focus-shadow-rgb: 123, 175, 172;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #50817e;
+  --bs-btn-active-bg: #ff6666;
   --bs-btn-active-border-color: #4b7976;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
@@ -6834,7 +6834,7 @@ textarea.form-control-lg {
   color: #ff0000 !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #50817e !important;
+  color: #ff6666 !important;
 }
 
 .link-secondary {
