--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
  * Copyright 2011-2022 The Bootstrap Authors
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE) #709F9D
+ * linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), 
  */
 :root {
   --bs-blue: #0d6efd;
@@ -2865,7 +2866,7 @@ textarea.form-control-lg {
   --bs-btn-focus-shadow-rgb: 123, 175, 172;
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #ff6666;
-  --bs-btn-active-border-color: #4b7976;
+  --bs-btn-active-border-color: #ff6666;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #ff0000;
@@ -11077,7 +11078,9 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/black.png");
+  background: url("../assets/img/black.png");
+
+
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
